--- a/docs/scss/layout/_grid.scss
+++ b/docs/scss/layout/_grid.scss
@@ -145,7 +145,7 @@
 
 	.portlet {
 		height: 100%;
-		overflow: scroll;
+		overflow-y: auto;
 	}
 
 	.box_head {
